--- a/lib/src/color-picker-collection.component.html
+++ b/lib/src/color-picker-collection.component.html
@@ -1,8 +1,8 @@
 <div class="color-picker-collection">
-    <label [id]="id">{{ label }}</label>
-    <div [id]="id">
-        <ng-container *ngFor="let color of colors">
-            <button type="button" [colorPickerOption]="color" (click)="setColor(color)"></button>
-        </ng-container>
-    </div>
+    <h3>{{ label }}</h3>
+    <button *ngFor="let color of colors" 
+        mat-raise-button 
+        [colorPickerOption]="color"
+        (click)="setColor(color)">
+    </button>
 </div>
