--- a/lib/src/color-picker-selector.component.scss
+++ b/lib/src/color-picker-selector.component.scss
@@ -1,13 +1,3 @@
-#color-picker {
-  left: 70px; 
-  background-color: white;
-  height: 150px;
-  width: 185px;
-  border: solid 1px #ccc;
-  opacity: 0;
-  padding: 5px;
-}
-
 canvas {
   &:first-child {
     margin-right: 5px;
@@ -18,35 +8,15 @@ canvas {
 }
 
 .color-picker-selector-preview {
-  display: block;
-  width: 100%;
-  height: 10px;
-  box-sizing: border-box;
-  border: 1px solid #000000;
+  width: 177px;
+  height: 18px;
+  margin-left: -18px;
+  border: 1px solid rgba(0,0,0,.2);
 }
 
-.color-hex {
-  width: 60px;
-  float: left;
-  label {
-    font-size: 13px;
-    margin-right: 3px;
+mat-form-field {
+  width: 50px;
+  &.mat-form-field {
+    font-size: 12px;
   }
-  input[type="text"] {
-    width: 40px;
-    text-align: center;
-  }
-}
-
-.color-value {
-   width: 40px;
-   float: left;
-   label {
-     font-size: 13px;
-     margin-right: 3px;
-   }
-   input[type="text"] {
-     width: 20px;
-     text-align: center;
-   }
 }
