--- a/lib/src/color-picker-selector.component.html
+++ b/lib/src/color-picker-selector.component.html
@@ -24,11 +24,11 @@
 <mat-grid-list cols="10" rowHeight="20px">
 
     <mat-grid-tile [colspan]="8">
-        <div class="color-picker-selector-preview" [style.background]="selectedColor | async"></div>
+        <div class="color-picker-selector-preview" [style.background]="selectedColor"></div>
     </mat-grid-tile>
     <mat-grid-tile [colspan]="2">
         <mat-form-field>
-            <input matInput [value]="selectedColor | async" />
+            <input matInput [value]="selectedColor" />
         </mat-form-field>
     </mat-grid-tile>
     
