refactor(picker) listen change of usedColor picker collection

--- a/lib/src/color-picker.component.html
+++ b/lib/src/color-picker.component.html
@@ -22,7 +22,8 @@
 
             <mat-color-picker-collection [label]="usedColorLabel" 
                                          [hideEmpty]="hideEmpty"
-                                         [colors]="usedColors$ | async">
+                                         [colors]="usedColors$ | async"
+                                         (changeColor)="updateTmpSelectedColor($event)">
             </mat-color-picker-collection>
 
             <ng-content></ng-content>
