--- a/lib/src/color-picker.component.html
+++ b/lib/src/color-picker.component.html
@@ -33,12 +33,12 @@
         <mat-card-actions *ngIf="!hideButtons">
             <mat-grid-list cols="2" rowHeight="30px;">
                 <mat-grid-tile>
-                    <button mat-button color="warn" (click)="toggle()">
+                    <button mat-button (click)="toggle()">
                         {{ btnCancel }}
                     </button>
                 </mat-grid-tile>
                 <mat-grid-tile>
-                    <button mat-button color="primary" (click)="confirmSelectedColor()">
+                    <button mat-button (click)="confirmSelectedColor()">
                         {{ btnConfirm }}
                     </button>
                 </mat-grid-tile>
