--- a/lib/src/color-picker-collection.component.scss
+++ b/lib/src/color-picker-collection.component.scss
@@ -1,5 +1,6 @@
 .color-picker-collection {
     min-height: 50px;
+    padding: 4px;
 
     h3 {
         font-size: 14px;
@@ -9,8 +10,8 @@
 }
 
 button {
-    width: 15px;
-    height: 15px;
+    width: 17px;
+    height: 17px;
     cursor: pointer;
-    margin: 1px 3px 0 0;
+    margin: 1px 2px 0 0;
 }
