--- a/lib/src/color-picker.component.scss
+++ b/lib/src/color-picker.component.scss
@@ -2,8 +2,12 @@
     width: 25px;
     height: 25px;
     cursor: pointer;
-    background-color: none;
+    background: none;
     border: 2px solid #dddddd;
+
+    &.empty {
+        background: #ffffff!important;
+    }
 }
 
 .color-picker {
@@ -15,6 +19,15 @@
         width: 100%;
         height: 8px;
     }
+}
+
+.transparent {
+    width: 32px;
+    height: 2px;
+    border-bottom: 2px solid red;
+    transform: translateY(-3px) translateX(-2px) rotate(45deg);
+    -webkit-transform: translateY(-2px) translateX(-11px) rotate(45deg);
+    position: absolute;
 }
 
 .mat-card-actions {
