--- a/lib/src/color-picker-collection.component.scss
+++ b/lib/src/color-picker-collection.component.scss
@@ -1,17 +1,33 @@
 .color-picker-collection {
     min-height: 50px;
-    padding: 4px;
+    padding: 10px 18px;
 
     h3 {
-        font-size: 14px;
-        padding: 8px 0;
-        margin: 0;
+        color: #100214;
+        text-transform: uppercase;
+        font-family: "Open Sans", sans-serif;
+        font-size: 12px;
+        font-weight: 700;
+        margin: 0 0 10px 0;
     }
 }
 
+.color-picker-remove-color {
+    background-color: #ffffff;
+  
+    .transparent {
+        width: 20px;
+        height: 1px;
+        border-bottom: 1px solid red;
+        transform: translateY(-4px) translateX(0px) rotate(45deg);
+        -webkit-transform: translateY(-4px) translateX(0px) rotate(45deg);
+    }
+  }
+
 button {
-    width: 17px;
-    height: 17px;
+    width: 22px;
+    height: 22px;
     cursor: pointer;
-    margin: 1px 2px 0 0;
+    border: 1px solid #E1E1E1;
+    margin: 3px;
 }
