feat(picker) add output of changing color, selected color and modify cancel action

--- a/lib/src/color-picker.component.html
+++ b/lib/src/color-picker.component.html
@@ -38,7 +38,7 @@
         <mat-card-actions *ngIf="!hideButtons">
             <mat-grid-list cols="2" rowHeight="30px;">
                 <mat-grid-tile>
-                    <button mat-button (click)="toggle()">
+                    <button mat-button (click)="cancelSelection()">
                         {{ btnCancel }}
                     </button>
                 </mat-grid-tile>
