feat(picker) add used size of collection

--- a/lib/src/color-picker.component.html
+++ b/lib/src/color-picker.component.html
@@ -25,6 +25,7 @@
         <mat-card-content>
 
             <mat-color-picker-collection [label]="usedColorLabel"
+                                         [size]="usedSizeColors"
                                          [transparent]="true"
                                          [hideEmpty]="hideEmpty"
                                          [colors]="usedColors$ | async"
