refactor(collection) change directive name

--- a/lib/src/color-picker-collection.component.html
+++ b/lib/src/color-picker-collection.component.html
@@ -11,7 +11,7 @@
             mat-mini-fab
             class="mat-elevation-z0"
             [disabled]="!color || color === 'none'"
-            [colorPickerOption]="color"
+            [matColorPickerOption]="color"
             (click)="setColor(color)">
     </button>
 </div>
