--- a/demo-app/src/app/app.component.html
+++ b/demo-app/src/app/app.component.html
@@ -13,6 +13,17 @@
 
 <hr style="margin: 50px 0;" />
 
+<h3>Colors as objects</h3>
+<mat-color-picker>
+  
+  <mat-color-picker-collection [label]="'First Object Collection'" 
+                               [colors]="items">
+  </mat-color-picker-collection>
+
+</mat-color-picker>
+
+<hr style="margin: 50px 0;" />
+
 <h3>Connect color picker with an input</h3>
 <mat-color-picker matConnectedColorPicker
                   [matConnectedColorPickerOrigin]="trigger">
